--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -5,21 +5,24 @@
     <meta name="description" content="Manantiales Market es una web donde los vecinos registrados de mantantiales venden articulos usados dentro de la comunidad">
     <meta name="keywords" content="manantiales, market, venta, compra, usados, altos de manantiales, lomas de manantiales, mantantiales country.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {{!-- Bootstrap --}}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>{{title}}</title>
+<!-- Incluye los estilos CSS de Bootstrap -->
+<link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css">
+<title>{{title}}</title>
 </head>
 <body>
     <header class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img class="logo" style= width: "110px"; height="110px" src="/logo/logo.png" alt="logo manantiales market"></a>
+  <a class="navbar-brand" href="/"><img class="logo" style="width: auto" height="78px" src="/logo/logo.png" alt="logo manantiales market"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Inicio</a>
+        <a class="nav-link" href="/">Inicio</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/products/real">Publicar un Producto</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Login / Registro</a>
@@ -33,7 +36,9 @@
     </header>
 
     {{{body}}}
-{{!-- Bootstrap Script --}}
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>      
+
+<!-- Incluye los scripts JavaScript de Bootstrap -->
+<script src="/js/bootstrap/bootstrap.bundle.min.js"></script>  
+  </body>
+      
 </html>
