--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
         <a class="nav-link" href="/products/real">Publicar un Producto</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Login / Registro</a>
+        <a class="nav-link" href="/users/register">Login / Registro</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contacto</a>
@@ -37,8 +37,17 @@
 
     {{{body}}}
 
+      <!-- Footer -->
+    <footer class="bg-dark text-light text-center py-3">
+        <div class="container">
+            <p>Manantiales Market &copy; 2024 - Todos los derechos reservados</p>
+        </div>
+    </footer>
+
 <!-- Incluye los scripts JavaScript de Bootstrap -->
 <script src="/js/bootstrap/bootstrap.bundle.min.js"></script>  
+
+
   </body>
       
 </html>
