--- a/src/views/productsReal.handlebars
+++ b/src/views/productsReal.handlebars
@@ -71,7 +71,9 @@
             />
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Publicar Producto</button>
+        <button type="submit" class="btn btn-primary mt-3">Publicar Producto</button>
+        <p id="successMessage" class="mt-3 d-none text-success fw-bold">Producto Publicado correctamente</p>
+
       </form>
     </div>
   </div>
@@ -95,6 +97,32 @@
   socket.on("products", (products) => {
     renderProducts(products);
   });
+
+  // Función para renderizar los productos
+  function renderProducts(products) {
+    const productContainer = document.getElementById("realTimeProducts");
+    productContainer.innerHTML = ""; // Limpiar los productos anteriores
+
+  // Invertir el orden de los productos
+    const reversedProducts = products.reverse();
+
+    // Iterar sobre los productos y crear elementos para mostrarlos en la página
+    reversedProducts.forEach((product) => {
+      const productHtml = `
+        <div class="col-md-3 mb-4">
+          <div class="card">
+            <img src="/products/${product.photo}" class="card-img-top" alt="${product.title}">
+            <div class="card-body">
+              <h5 class="card-title">${product.title}</h5>
+              <p class="card-text">Precio: $${product.price}</p>
+              <a href="#" class="btn btn-primary">Ver más</a>
+            </div>
+          </div>
+        </div>
+      `;
+      productContainer.innerHTML += productHtml;
+    });
+  }
 
   // Manejar el envío del formulario para agregar un nuevo producto
 const productForm = document.getElementById("productForm");
@@ -126,6 +154,19 @@ try {
       // Agregar la URL de la imagen al objeto del nuevo producto
       newProduct.photo = imageUrl;
 
+    const successMessage = document.getElementById("successMessage");
+    successMessage.classList.remove("d-none"); 
+    successMessage.classList.add("d-block"); 
+
+    // Restablecer el formulario
+    productForm.reset();
+
+    // Ocultar el mensaje después de 5 segundos
+    setTimeout(() => {
+        successMessage.classList.add("d-none"); // Ocultar el mensaje
+        successMessage.classList.remove("d-block"); // Asegurarse de que esté oculto
+    }, 5000);
+
       // Enviar el evento "newProduct" al servidor con los datos del nuevo producto
       socket.emit("newProduct", newProduct);
     } else {
@@ -133,30 +174,10 @@ try {
     }
   } catch (error) {
     console.error("Error al subir la imagen:", error);
+    return next(error);
   }
 });
 
 
-  // Función para renderizar los productos
-  function renderProducts(products) {
-    const productContainer = document.getElementById("realTimeProducts");
-    productContainer.innerHTML = ""; // Limpiar los productos anteriores
-
-    // Iterar sobre los productos y crear elementos para mostrarlos en la página
-    products.forEach((product) => {
-      const productHtml = `
-        <div class="col-md-3 mb-4">
-          <div class="card">
-            <img src="/products/${product.photo}" class="card-img-top" alt="${product.title}">
-            <div class="card-body">
-              <h5 class="card-title">${product.title}</h5>
-              <p class="card-text">Precio: $${product.price}</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
-            </div>
-          </div>
-        </div>
-      `;
-      productContainer.innerHTML += productHtml;
-    });
-  }
+  
 </script>
