Se finalizó y se hizo testing de sprint5

--- a/src/views/productsReal.handlebars
+++ b/src/views/productsReal.handlebars
@@ -115,7 +115,7 @@
             <div class="card-body">
               <h5 class="card-title">${product.title}</h5>
               <p class="card-text">Precio: $${product.price}</p>
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="/products/${product._id}" class="btn btn-primary">Ver más</a>
             </div>
           </div>
         </div>
