Aplico modificaciones sugeridas, me queda resolver las vistas de errores y registro exitoso de usuario

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,3 +1,4 @@
+  
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -62,9 +63,9 @@
     {{{body}}}
 
     <!-- Footer -->
-    <footer class="bg-dark text-light text-center py-3">
+    <footer class="bg-dark text-light text-center fixed-bottom py-3">
       <div class="container">
-        <p>Manantiales Market &copy; 2024 - Todos los derechos reservados</p>
+        <p>Manantiales Market © 2024 - Todos los derechos reservados</p>
       </div>
     </footer>
     <!-- Incluye los scripts JavaScript de Bootstrap -->
