--- a/src/views/userPanel.handlebars
+++ b/src/views/userPanel.handlebars
@@ -1,5 +1,5 @@
 {{#if userLogged}}
-<div class="container mt-3 mb-5">
+<div class="container mt-2 mb-5">
   <div class="row">
     <!-- Columna para la información del usuario -->
     <div class="col-md-4">
@@ -11,7 +11,7 @@
             <li class="list-group-item"><strong>Nombre:</strong> {{userLogged.name}}</li>
             <li class="list-group-item"><strong>Apellido:</strong> {{userLogged.lastName}}</li>
             <li class="list-group-item"><strong>DNI:</strong> {{userLogged.dni}}</li>
-            <li class="list-group-item"><strong>Manzana y Lote:</strong> {{userLogged.manzanaYLote}}</li>
+            <li class="list-group-item"><strong>Manzana y Lote:</strong> {{userLogged.blockAndLot}}</li>
             <li class="list-group-item"><strong>Teléfono:</strong> {{userLogged.phone}}</li>
           </ul>
         </div>
