--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,23 +1,23 @@
 <!-- Contenido específico de la página de inicio -->
-<div class="container">
+<div class="container py-5">
   <h1 class="text-center">¡Bienvenido a Manantiales Market!</h1>
-  <p class="text-center">Descubre una amplia variedad de productos usados
-    disponibles para comprar en nuestra comunidad.</p>
+  <p class="text-center">Descubre una amplia variedad de productos usados disponibles para comprar en nuestra comunidad.</p>
   <h3>Productos Publicados</h3>
   <div class="row">
     {{#each products}}
       <div class="col-md-3 mb-4">
-        <div class="card">
-          <img
-            src="/products/{{this.photo}}"
-            class="card-img-top"
-            alt="{{this.title}}"
-          />
-          <div class="card-body">
+        <div class="card h-100">
+          <div class="card-img-top" style="height: 250px; overflow: hidden;"> 
+            <img
+              src="/products/{{this.photo}}"
+              class="img-fluid"
+              alt="{{this.title}}"
+            />
+          </div>
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">{{this.title}}</h5>
             <p class="card-text">Precio: ${{this.price}}</p>
-            <!-- Agrega cualquier otra información que desees mostrar en la tarjeta -->
-            <a href="/products/{{this._id}}" class="btn btn-primary">Ver más</a>
+            <a href="/products/{{this._id}}" class="btn btn-primary mt-auto">Ver más</a>
           </div>
         </div>
       </div>
