--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -1,6 +1,6 @@
 {{#if productFound}}
 <section style="background-color: #eee;">
-  <div class="container py-5">
+  <div class="container py-5 mb-5">
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-6 col-xl-6">
         <div class="card" style="border-radius: 15px;">
