--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,38 +1,70 @@
-<div class="container mt-3 mb-5">
+<div class="container mb-5 py-5">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <h2 class="text-center mb-4">Registro de Usuario</h2>
-      <form action="/registro" method="POST">
+      <form action="/api/users" method="post">
         <div class="mb-3">
           <label for="name" class="form-label">Nombre</label>
           <input type="text" class="form-control" id="name" name="name" placeholder="Ej: Fernando" required>
         </div>
+        {{#if errors.name}}
+            <div class="invalid-feedback">{{errors.name}}</div>
+          {{/if}}
         <div class="mb-3">
           <label for="lastName" class="form-label">Apellido</label>
           <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Ej: Rabellini" required>
         </div>
+        {{#if errors.lastName}}
+            <div class="invalid-feedback">{{errors.lastName}}</div>
+          {{/if}}
         <div class="mb-3">
           <label for="dni" class="form-label">DNI</label>
-          <input type="number" class="form-control" id="dni" name="dni" placeholder="Ej: 33162314" required>
+          <input type="text" class="form-control" id="dni" name="dni" placeholder="Ej: 33162314" required>
         </div>
+        {{#if errors.dni}}
+            <div class="invalid-feedback">{{errors.dni}}</div>
+          {{/if}}
         <div class="mb-3">
-          <label for="manzanaYLote" class="form-label">Manzana y Lote</label>
-          <input type="text" class="form-control" id="manzanaYLote" name="manzanaYLote" placeholder="Ej: 3445" required>
+          <label for="blockAndLot" class="form-label">Manzana y Lote</label>
+          <input type="text" class="form-control" id="blockAndLot" name="blockAndLot" placeholder="Ej: 3445" required>
         </div>
+        {{#if errors.blockAndLot}}
+            <div class="invalid-feedback">{{errors.blockAndLot}}</div>
+          {{/if}}
         <div class="mb-3">
           <label for="phone" class="form-label">Teléfono</label>
           <input type="tel" class="form-control" id="phone" name="phone" placeholder="Ej: 3515921209" required>
         </div>
+        {{#if errors.phone}}
+            <div class="invalid-feedback">{{errors.phone}}</div>
+          {{/if}}
         <div class="mb-3">
           <label for="email" class="form-label">Correo Electrónico</label>
           <input type="email" class="form-control" id="email" name="email" placeholder="Ej: fer@gmail.com" required>
         </div>
+        {{#if errors.email}}
+            <div class="invalid-feedback">{{errors.email}}</div>
+          {{/if}}
         <div class="mb-3">
           <label for="password" class="form-label">Contraseña</label>
           <input type="password" class="form-control" id="password" name="password" placeholder="Ej: Password789" required>
         </div>
+        {{#if errors.password}}
+            <div class="invalid-feedback">{{errors.password}}</div>
+          {{/if}}
         <button type="submit" class="btn btn-primary">Registrarse</button>
       </form>
+      {{#if errorMessage}}
+        <div class="alert alert-danger mt-3" role="alert">
+          {{errorMessage}}
+        </div>
+      {{/if}}
+      {{#if successMessage}}
+        <div class="alert alert-success mt-3" role="alert">
+          {{successMessage}}
+        </div>
+      {{/if}}
     </div>
   </div>
 </div>
+
