se avanza con el desafio

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -50,7 +50,7 @@
               <a class="nav-link" href="/products/real">Publicar un Producto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/users/register">Login / Registro</a>
+              <a class="nav-link" href="/register">Login / Registro</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contacto</a>
