Se finaliza challange 2

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -50,10 +50,13 @@
               <a class="nav-link" href="/products/real">Publicar un Producto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/register">Login / Registro</a>
+              <a class="nav-link" href="/register">Registro</a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" href="/login">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link" href="/cart?buyer_id=66298c2971a5c48e51f7ad5f">Carrito</a>
             </li>
           </ul>
         </div>
