--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -56,7 +56,7 @@
               <a class="nav-link" href="/login">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/cart?buyer_id=66298c2971a5c48e51f7ad5f">Carrito</a>
+              <a class="nav-link" href="/cart/66298c2971a5c48e51f7ad5f">Carrito</a>
             </li>
           </ul>
         </div>
