--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -18,50 +18,56 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+  <script src="https://kit.fontawesome.com/e4eccb6dea.js" crossorigin="anonymous"></script>
     <title>{{title}}</title>
   </head>
   <body>
     <header class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/"><img
-            class="logo"
-            style="width: auto"
-            height="78px"
-            src="/logo/logo.png"
-            alt="logo manantiales market"
-          /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Inicio</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="/products/real">Publicar un Producto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/register">Registro</a>
-              </li>
-              <li class="nav-item">
-              <a class="nav-link" href="/login">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/cart/66298c2971a5c48e51f7ad5f">Carrito</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/"><img
+        class="logo"
+        style="width: auto"
+        height="78px"
+        src="/logo/logo.png"
+        alt="logo manantiales market"
+      /></a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Inicio</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/products/real">Publicar un Producto</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/register">Registro</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ms-auto"> 
+        <li class="nav-item">
+          <a class="nav-link" href="/login"><i class="fas fa-user"></i> Login</a> 
+        </li>
+        <li class="nav-item mt-1">
+          <a class="nav-link" href="/cart/66298c2971a5c48e51f7ad5f"><i class="fas fa-shopping-cart"></i></a> 
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
+
+    
 
     {{{body}}}
 
