--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -35,8 +35,12 @@
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
           <a href="/" class="text-dark fw-bold">Atrás</a>
-           <button id="addToCartBtn" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary">Agregar al Carrito</button>
-             <div id="addToCartMessage" class="text-success fw-bold" style="display: none;">Producto agregado al carrito!</div>
+           {{#if isOnline}}
+            <button id="addToCartBtn" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary">Agregar al Carrito</button>
+            <div id="addToCartMessage" class="text-success fw-bold" style="display: none;">Producto agregado al carrito!</div>
+            {{else}}
+            <p>Debes iniciar sesión para agregar este producto al carrito.</p>
+            {{/if}}
               </div>
           </div>
         </div>
@@ -64,7 +68,7 @@
     if (addToCartBtn) {
       addToCartBtn.addEventListener("click", async () => {
         const product_id = "{{productFound._id}}";
-        const buyer_id = "66298c2971a5c48e51f7ad5f";
+        const buyer_id = "{{user_id}}";
         const seller_id = "66298c2971a5c48e51f7ad5e";
         const quantity = 1;
   
@@ -92,3 +96,4 @@
     }
   });
 </script>
+
