avances de sprint8

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -104,6 +104,7 @@
        
       });
       const responseData = await response.json();      
+      console.log(responseData);
 
       if (responseData.statusCode === 200) {
         
