--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -49,6 +49,9 @@
         },
         body: JSON.stringify({ email, password })
       });
+
+      responseData = await response.json()
+      console.log (responseData)
       
       if (response.ok) {             
         window.location.href = `/users/`;
