--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -24,7 +24,7 @@
     <div class="row mt-4 mb-2">
       <div class="col-md-6 mb-5">
         <button class="btn btn-success" onclick="checkout()">Contactar</button>
-        <button class="btn btn-secondary" onclick="cancel()">Cancelar</button>
+        <button class="btn btn-secondary" onclick="clearCart()">Vaciar Carrito</button>
       </div>
     </div>    
   {{else}}
@@ -36,7 +36,7 @@
 
 
 <script>
-  
+
 document.addEventListener("DOMContentLoaded", async () => {
     try {
       const response = await fetch('/api/tickets');
@@ -78,8 +78,27 @@ document.addEventListener("DOMContentLoaded", async () => {
   }
 
   // Función para cancelar la compra y vaciar el carrito
-  function cancel() {
-    // Agregar aquí la lógica para cancelar la compra y vaciar el carrito
-    console.log('Cancelando la compra y vaciando el carrito...');
+      async function clearCart() {
+    try {
+      const response = await fetch('/api/cart-contact/all', {
+        method: 'DELETE'
+      });
+
+      responseData = response.json()
+
+      console.log(responseData)
+
+      if (response.ok) {
+        // Si la solicitud se realizó con éxito, recargar la página o realizar otra acción
+        location.reload(); // Recargar la página para reflejar los cambios
+      } else {
+        console.error('Error al vaciar el carrito:', response.statusText);
+        // Mostrar un mensaje de error al usuario, si es necesario
+      }
+    } catch (error) {
+      console.error('Error al vaciar el carrito:', error.message);
+      // Manejar errores de red u otros errores
+    }
   }
+  
 </script>
